
=head2 Context::location is now Context::g1_range

=head2 New context variable, Context::g1_span

=head2 Marpa::R2::Scanless::G named arguments removed in Marpa::R3

The C<actions>, C<action_object>, C<default_action>
and C<default_empty_action>
named arguments
of Marpa::R2::Scanless::G named arguments
have been
removed in Marpa::R3.

=head2 New Marpa::R3::Scanless::G methods

Several new methods have been added as accessors for
L0 grammars:

=over 4

=item * C<Marpa::R2::Scanless::G::l0_symbol_dsl_form()>

=item * C<Marpa::R2::Scanless::G::l0_rule_expand()>

=item * C<Marpa::R2::Scanless::G::l0_rule_ids()>

=item * C<Marpa::R2::Scanless::G::l0_rule_show()>

=item * C<Marpa::R2::Scanless::G::l0_symbol_display_form()>

=item * C<Marpa::R2::Scanless::G::l0_symbol_ids()>

=item * C<Marpa::R2::Scanless::G::l0_symbol_name()>

=item * C<Marpa::R2::Scanless::G::l0_show_rules()>

=item * C<Marpa::R2::Scanless::G::l0_show_symbols()>

=back

=head2 Marpa::R2::Scanless::G methods removed in Marpa::R3

The
C<Marpa::R2::Scanless::G::g0_rule()> method,
the C<Marpa::R2::Scanless::G::g0_rule_ids()> method,
the C<Marpa::R2::Scanless::G::g1_rule_ids()> method,
and
the C<Marpa::R2::Scanless::G::rule()> method,
discouraged in Marpa::R2,
have been eliminated in Marpa::R3.

The
C<Marpa::R2::Scanless::G::symbol_description()> method
has been removed.

=head2 Marpa::R2::Scanless::G methods changed in Marpa::R3

The following methods have been changed:

=over 4

=item * C<Marpa::R2::Scanless::G::symbol_dsl_form()>

=item * C<Marpa::R2::Scanless::G::rule_expand()>

=item * C<Marpa::R2::Scanless::G::rule_ids()>

=item * C<Marpa::R2::Scanless::G::rule_show()>

=item * C<Marpa::R2::Scanless::G::symbol_display_form()>

=item * C<Marpa::R2::Scanless::G::symbol_ids()>

=item * C<Marpa::R2::Scanless::G::symbol_name()>

=item * C<Marpa::R2::Scanless::G::show_rules()>

=item * C<Marpa::R2::Scanless::G::show_symbols()>

=back

They no longer take an argument indicating the subgrammar --