@@ -95,7 +95,7 @@ EOS
 
 }
 
-my ($S_sym) = grep { $grammar->g1_symbol_name($_) eq 'S' } $grammar->symbol_ids();
+my ($S_sym) = grep { $grammar->g1_symbol_name($_) eq 'S' } $grammar->g1_symbol_ids();
 my ($target_rule) = grep { ($grammar->rule_expand($_))[0] eq $S_sym } $grammar->rule_ids();
 my $target_rule_length = -1 + scalar (() = $grammar->rule_expand($target_rule));
 
