@@ -101,7 +101,7 @@ EOS
 
 }
 
-my ($SS_sym) = grep { $grammar->g1_symbol_name($_) eq 'SS' } $grammar->symbol_ids();
+my ($SS_sym) = grep { $grammar->g1_symbol_name($_) eq 'SS' } $grammar->g1_symbol_ids();
 my ($target_rule) = grep { ($grammar->rule_expand($_))[0] eq $SS_sym } $grammar->rule_ids();
 my $target_rule_length = -1 + scalar (() = $grammar->rule_expand($target_rule));
 
