@@ -179,10 +179,14 @@ removed in Marpa::R3.
 
 =head2 New Marpa::R3::Scanless::G methods
 
-Several new methods have been added as accessors for
-L0 grammars:
+New methods have been added as accessors for
+G1 and L0 grammars:
 
 =over 4
+
+=item * C<Marpa::R2::Scanless::G::g1_symbol_ids()>
+
+=item * C<Marpa::R2::Scanless::G::g1_symbol_name()>
 
 =item * C<Marpa::R2::Scanless::G::l0_symbol_dsl_form()>
 
